# plima

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.cache/pip/wheels/c6/04/e8/2020824c919fc192a3a3659030067c3ccc9f20d6df441c01d6/: origin.json  plima-0.1.dev1+gbbb63dc4c.d20260621-py3-none-any.whl
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: conf.py
docs/_build/doctest/: output.txt
docs/_build/doctest/.doctrees/: environment.pickle
docs/_build/html/: .buildinfo  index.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/.doctrees/api/: index.doctree
docs/_build/html/_modules/plima/backends/ccl/: la.html  nla.html
docs/_build/html/_modules/plima/utils/: converters.html
logo/: logo.py  logo_sticks.py
main/: .buildinfo  genindex.html  search.html  searchindex.js
main/.doctrees/: environment.pickle  index.doctree
main/.doctrees/api/: index.doctree
main/_modules/plima/backends/ccl/: nla.html
main/_modules/plima/models/: halo_model.html
main/_sources/: index.rst.txt
main/api/: index.html
src/: __init__.py
src/plima/: __init__.py  parameters.py
src/plima.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/plima/backends/: __init__.py
src/plima/backends/ccl/: __init__.py  builder.py  halo_model.py  la.py  nla.py  tatt.py
src/plima/calculators/: tatt.py
src/plima/models/: __init__.py  _discovery.py  halo_model.py  la.py  model_registry.py  nla.py  tatt.py
src/plima/utils/: __init__.py  constants.py  converters.py  types.py  validators.py
tests/: test_backends_ccl_builder.py  test_backends_ccl_halo_model.py  test_backends_ccl_la.py  test_backends_ccl_nla.py  test_backends_ccl_tatt.py  test_models_discovery.py  test_models_halo_model.py  test_models_la.py  test_models_model_registry.py  test_models_nla.py  test_models_tatt.py  test_utils_constants.py  test_utils_converters.py  test_utils_types.py  test_utils_validators.py
v0.1.0/: .buildinfo  py-modindex.html  searchindex.js
v0.1.0/.doctrees/: environment.pickle  index.doctree
v0.1.0/.doctrees/api/: index.doctree
v0.1.0/_modules/plima/backends/ccl/: halo_model.html
v0.1.0/_modules/plima/models/: la.html  tatt.html
v0.1.0/_sources/api/: index.rst.txt
v0.1.1/: .buildinfo  objects.inv
v0.1.1/.doctrees/: environment.pickle  index.doctree
v0.1.1/.doctrees/api/: index.doctree
v0.1.1/_modules/: index.html
v0.1.1/_modules/plima/backends/ccl/: builder.html
v0.1.1/_modules/plima/models/: nla.html
v0.1.1/_modules/plima/utils/: validators.html
v0.1.2/: .buildinfo
v0.1.2/.doctrees/: environment.pickle
v0.1.2/_modules/plima/backends/ccl/: la.html  tatt.html
v0.1.2/_modules/plima/models/: model_registry.html
