[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "plima"
dynamic = ["version"]
description = "Intrinsic alignment modeling tools for cosmology."
readme = "README.md"
requires-python = ">=3.10"

license = "MIT"
license-files = ["LICENSE*"]

authors = [
  { name = "Nikolina Šarčević", email = "nikolina.sarcevic@gmail.com" },
]

classifiers = [
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  "numpy>=1.23",
  "scipy",
  "py-lfkit",
  "pybinny",
  "pyccl",
]

[project.optional-dependencies]

plot = [
  "matplotlib",
  "cmasher",
]

docs = [
  "sphinx<9",
  "sphinx-design",
  "sphinx-copybutton",
  "furo",
  "sphinx-multiversion",
  "matplotlib",
  "cmasher",
  "tox",
]

dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "ruff>=0.5",
  "tox>=4.22",
]

[tool.setuptools_scm]
version_file = "src/plima/_version.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra -m 'not slow and not benchmark'"
markers = [
  "slow: marks tests as slow",
  "benchmark: marks benchmark tests",
]

[tool.ruff]
line-length = 79
target-version = "py310"
src = ["src", "tests"]
include = ["src/**/*.py", "tests/**/*.py"]
exclude = ["src/plima/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I", "D", "PLC0415"]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["plima"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tox]
requires = ["tox>=4.22"]
labels = { test = ["py310", "py311", "py312", "py313"] }
envlist = [
  "do",
  "docs",
  "docs-releases",
  "lint",
  "py310",
  "py311",
  "py312",
  "py313",
]

[tool.tox.env.py310]
description = "Run unit tests under Python 3.10"
extras = ["dev"]
commands = [
  ["pytest", "-q"],
]

[tool.tox.env.py311]
description = "Run unit tests under Python 3.11"
extras = ["dev"]
commands = [
  ["pytest", "-q"],
]

[tool.tox.env.py312]
description = "Run unit tests under Python 3.12"
extras = ["dev"]
commands = [
  ["pytest", "-q"],
]

[tool.tox.env.py313]
description = "Run unit tests under Python 3.13"
extras = ["dev"]
commands = [
  ["pytest", "-q"],
]

[tool.tox.env.bench]
description = "Run slow benchmark tests"
extras = ["dev"]
commands = [
  ["pytest", "-m", "slow", "benchmarks", { replace = "posargs", extend = true }],
]

[tool.tox.env.docs]
description = "Build docs with Sphinx"
extras = ["docs", "plot"]
allowlist_externals = ["rm"]
commands = [
  [
    "rm",
    "-rf",
    "{tox_root}/docs/_build",
    "{tox_root}/docs/api/generated",
  ],
  [
    "sphinx-build",
    "-E",
    "-c", "{tox_root}/docs",
    "-b", "{posargs:html}",
    "{tox_root}/docs",
    "{tox_root}/docs/_build/{posargs:html}",
    "--fail-on-warning",
  ],
]

[tool.tox.env.do]
description = "Run doctests, build HTML, and open local docs"
extras = ["docs", "plot"]
allowlist_externals = ["open", "rm"]
commands = [
  [
    "rm",
    "-rf",
    "{tox_root}/docs/_build",
    "{tox_root}/docs/api/generated",
  ],
  [
    "sphinx-build",
    "-E",
    "-c", "{tox_root}/docs",
    "-b", "doctest",
    "{tox_root}/docs",
    "{tox_root}/docs/_build/doctest",
    "--fail-on-warning",
  ],
  [
    "sphinx-build",
    "-E",
    "-c", "{tox_root}/docs",
    "-b", "html",
    "{tox_root}/docs",
    "{tox_root}/docs/_build/html",
    "--fail-on-warning",
  ],
  [
    "open",
    "{tox_root}/docs/_build/html/index.html",
  ],
]

[tool.tox.env.docs-releases]
description = "Build the documentation for PLIMA releases using Sphinx"
extras = ["docs", "plot"]
allowlist_externals = ["cp", "rm"]
commands = [
  [
    "rm",
    "-rf",
    "{tox_root}/docs/_build",
    "{tox_root}/docs/api/generated",
  ],
  [
    "sphinx-multiversion",
    "-c", "{tox_root}/docs",
    "{tox_root}/docs",
    "{tox_root}/docs/_build/html",
    "--fail-on-warning",
  ],
  [
    "cp",
    "{tox_root}/docs/_templates/pages_redirect.html",
    "{tox_root}/docs/_build/html/index.html",
  ],
]

[tool.tox.env.lint]
description = "Lint PLIMA using Ruff"
extras = ["dev"]
commands = [
  [
    "ruff",
    "check",
    "{tox_root}",
    { replace = "posargs", extend = true },
  ],
]

[tool.tox.env.sync-release-metadata]
description = "Sync CITATION.cff and README.md release metadata"
skip_install = true
deps = ["setuptools-scm>=8"]
commands = [
  ["python", "tools/sync_release_metadata.py"],
]
